# xcf-rs

./: .gitignore  Cargo.toml  README.md
src/: create.rs  lib.rs  parser.rs  rle.rs
src/data/: color.rs  error.rs  header.rs  layer.rs  mod.rs  pixeldata.rs  precision.rs  property.rs  rgba.rs  tiles.rs  version.rs  xcf.rs
tests/: create.rs  parsing.rs  rle.rs  rle_compression.rs  rle_decompression.rs  samples.rs  tiles.rs
tests/samples/: 1024x1024-better-compression.tiff  120-x20-base-with-alpha.xcf  512x512-base-with-alpha.xcf  bug.xcf  lernkarte-bvd__gimp-issue-12575.xcf  mini_rgb.xcf  minimal.xcf  minimal_128x129_diff_pixels.xcf  minimal_12x12_diff_pixels.xcf  minimal_12x1_diff_pixels.xcf  minimal_138x138_same_pixels.xcf  minimal_1x32_diff_pixels.xcf  minimal_1x64_diff_pixels.xcf  minimal_36x36_diff_pixels.xcf  minimal_7x1_diff_pixels.xcf  minimal_9x138_same_pixels.xcf  minimal_9x15_pixels.xcf  minimal_9x15_pixels__old.xcf  minimal_9x15_same_pixels.xcf  minimal_9x3_pixels.xcf  minimal_9x65_same_pixels.xcf  minimal_9x9_diff_pixels.xcf  minimal_9x9_pixels.xcf  minimal_four_pixels.xcf  minimal_nine_pixels.xcf  tile_rgb.xcf  try.xcf
tests/samples/parsing/: mini.xcf
