[package]
name = "xcf-rs"
version = "0.5.0"
edition = "2024"
authors = ["mothsart"]
description = "A basic standalone GIMP XCF library in Rust."
include = [
    "**/*.rs",
    "Cargo.toml",
]

license = "Unlicense"
readme = "README.md"

keywords = ["gimp", "xcf", "image"]
repository = "https://github.com/mothsART/xcf-rs"

[dependencies]
derive-error = "0.0.4"
byteorder = "1.4.3"
hex-slice = "0.1.4"

[dev-dependencies]
sha1 = "0.10"
